# signature

./: CMakeLists.txt  CMakeSettings.json  README.md
Signature/: CMakeLists.txt  Configurations.cpp  Configurations.h  Signature.cpp  Signature.h  SignatureMaker.cpp  SignatureMaker.h  SignatureTask.cpp  SignatureTask.h
